--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,6 +1,6 @@
 name: flake8 Lint
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   flake8-lint:
@@ -14,6 +14,6 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: "3.8"
-          
+
       - name: flake8 Lint
         uses: py-actions/flake8@v1
